# tool-versions-generator

./: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
.github/workflows/: create_assets.sh  release.yaml
cmd/tvg/: BUILD.bazel  app.go  flags.go  main.go  utils.go
pkg/github/: BUILD.bazel  assets.go  client.go
pkg/output/: BUILD.bazel  output.go  sha.go
