load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "github",
    srcs = [
        "assets.go",
        "client.go",
    ],
    importpath = "github.com/mgred/tool-versions-generator/pkg/github",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_go_github_v52//github",
        "@org_golang_x_oauth2//:oauth2",
    ],
)
